Parziale/Versione11dic/ParLua.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from ParLua.y
-----------------------------------------------------------------------------

state 148 contains 1 shift/reduce conflicts.
state 176 contains 33 reduce/reduce conflicts.

rule 4 is unused
rule 5 is unused
rule 42 is unused

terminal L_Pcontinue is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDec -> Dec                                 (1)
	%start_pStm -> Stm                                 (2)
	%start_pExp -> Exp                                 (3)
	Pbreak -> L_Pbreak                                 (4)
	Pcontinue -> L_Pcontinue                           (5)
	Pident -> L_Pident                                 (6)
	Pint -> L_Pint                                     (7)
	Pbool -> L_Pbool                                   (8)
	Pstring -> L_Pstring                               (9)
	Preal -> L_Preal                                   (10)
	Pchar -> L_Pchar                                   (11)
	Program -> ListDec                                 (12)
	ListDec ->                                         (13)
	ListDec -> ListDec Dec                             (14)
	Dec -> 'function' Type_specifier Pident '(' ListArgument ')' ListDecStm 'end'   (15)
	Dec -> 'function' Pident '(' ListArgument ')' ListDecStm 'end'   (16)
	Dec -> Type_specifier Pident                       (17)
	Dec -> 'const' Type_specifier Pident               (18)
	Dec -> Type_specifier Pident '=' Exp               (19)
	Dec -> 'const' Type_specifier Pident '=' Exp       (20)
	Type_specifier -> 'boolean'                        (21)
	Type_specifier -> 'character'                      (22)
	Type_specifier -> 'float'                          (23)
	Type_specifier -> 'integer'                        (24)
	Type_specifier -> 'string'                         (25)
	Type_specifier -> 'void'                           (26)
	Type_specifier -> 'pointer' Type_specifier         (27)
	Type_specifier -> '{}' Type_specifier              (28)
	Type_specifier -> '{' Exp '}' Type_specifier       (29)
	Argument -> Modality Type_specifier Pident         (30)
	ListArgument ->                                    (31)
	ListArgument -> Argument                           (32)
	ListArgument -> Argument ',' ListArgument          (33)
	Modality ->                                        (34)
	Modality -> 'val'                                  (35)
	Modality -> 'const'                                (36)
	Modality -> 'ref'                                  (37)
	Stm -> Lexp Assignment_Op Exp                      (38)
	Stm -> 'return' Exp                                (39)
	Stm -> Exp                                         (40)
	Stm -> 'if' Exp 'then' ListDecStm 'end'            (41)
	Stm -> 'if' Exp 'then' ListDecStm 'else' ListDecStm 'end'   (42)
	Stm -> 'while' Exp 'do' ListDecStm 'end'           (43)
	Stm -> 'repeat' ListDecStm 'until' Exp             (44)
	Stm -> 'for' Pident '=' Exp ',' Exp ',' Exp 'do' ListDecStm 'end'   (45)
	Stm -> 'try' ListDecStm 'catch' ListDecStm 'end'   (46)
	DecStm -> Dec                                      (47)
	DecStm -> Stm                                      (48)
	ListDecStm ->                                      (49)
	ListDecStm -> ListDecStm DecStm                    (50)
	Exp -> Pident '(' ListExp ')'                      (51)
	Exp -> '(' Exp ')'                                 (52)
	Exp -> Exp 'or' Exp                                (53)
	Exp -> Exp 'and' Exp                               (54)
	Exp -> Exp '==' Exp                                (55)
	Exp -> Exp '~=' Exp                                (56)
	Exp -> Exp '<' Exp                                 (57)
	Exp -> Exp '>' Exp                                 (58)
	Exp -> Exp '<=' Exp                                (59)
	Exp -> Exp '>=' Exp                                (60)
	Exp -> Exp '+' Exp                                 (61)
	Exp -> Exp '-' Exp                                 (62)
	Exp -> Exp '*' Exp                                 (63)
	Exp -> Exp '/' Exp                                 (64)
	Exp -> Exp '^' Exp                                 (65)
	Exp -> Exp '%' Exp                                 (66)
	Exp -> 'if' Exp 'then' ListDecStm 'else' ListDecStm 'end'   (67)
	Exp -> '&' Exp                                     (68)
	Exp -> '-' Exp                                     (69)
	Exp -> 'not' Exp                                   (70)
	Exp -> '{' ListExp '}'                             (71)
	Exp -> Lexp                                        (72)
	Exp -> Preal                                       (73)
	Exp -> Pint                                        (74)
	Exp -> Pbool                                       (75)
	Exp -> Pstring                                     (76)
	Exp -> Pchar                                       (77)
	ListExp ->                                         (78)
	ListExp -> Exp                                     (79)
	ListExp -> Exp ',' ListExp                         (80)
	Lexp -> Pident                                     (81)
	Lexp -> '(' Lexp ')'                               (82)
	Lexp -> '_' Exp                                    (83)
	Lexp -> Lexp '{' Exp '}'                           (84)
	Assignment_Op -> '='                               (85)
	Assignment_Op -> '*='                              (86)
	Assignment_Op -> '/='                              (87)
	Assignment_Op -> '%='                              (88)
	Assignment_Op -> '+='                              (89)
	Assignment_Op -> '-='                              (90)
	Assignment_Op -> '^='                              (91)
	Assignment_Op -> '&='                              (92)
	Assignment_Op -> '|='                              (93)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'%'            { PT _ (TS _ 1) }
	'%='           { PT _ (TS _ 2) }
	'&'            { PT _ (TS _ 3) }
	'&='           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'*='           { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'+='           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'-='           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	'/='           { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'^'            { PT _ (TS _ 22) }
	'^='           { PT _ (TS _ 23) }
	'_'            { PT _ (TS _ 24) }
	'and'          { PT _ (TS _ 25) }
	'boolean'      { PT _ (TS _ 26) }
	'catch'        { PT _ (TS _ 27) }
	'character'    { PT _ (TS _ 28) }
	'const'        { PT _ (TS _ 29) }
	'do'           { PT _ (TS _ 30) }
	'else'         { PT _ (TS _ 31) }
	'end'          { PT _ (TS _ 32) }
	'float'        { PT _ (TS _ 33) }
	'for'          { PT _ (TS _ 34) }
	'function'     { PT _ (TS _ 35) }
	'if'           { PT _ (TS _ 36) }
	'integer'      { PT _ (TS _ 37) }
	'not'          { PT _ (TS _ 38) }
	'or'           { PT _ (TS _ 39) }
	'pointer'      { PT _ (TS _ 40) }
	'ref'          { PT _ (TS _ 41) }
	'repeat'       { PT _ (TS _ 42) }
	'return'       { PT _ (TS _ 43) }
	'string'       { PT _ (TS _ 44) }
	'then'         { PT _ (TS _ 45) }
	'try'          { PT _ (TS _ 46) }
	'until'        { PT _ (TS _ 47) }
	'val'          { PT _ (TS _ 48) }
	'void'         { PT _ (TS _ 49) }
	'while'        { PT _ (TS _ 50) }
	'{'            { PT _ (TS _ 51) }
	'{}'           { PT _ (TS _ 52) }
	'|='           { PT _ (TS _ 53) }
	'}'            { PT _ (TS _ 54) }
	'~='           { PT _ (TS _ 55) }
	L_Pbreak       { PT _ (T_Pbreak _) }
	L_Pcontinue    { PT _ (T_Pcontinue _) }
	L_Pbool        { PT _ (T_Pbool _) }
	L_Pident       { PT _ (T_Pident _) }
	L_Pint         { PT _ (T_Pint _) }
	L_Pstring      { PT _ (T_Pstring _) }
	L_Preal        { PT _ (T_Preal _) }
	L_Pchar        { PT _ (T_Pchar _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDec     rule  1
	%start_pStm     rule  2
	%start_pExp     rule  3
	Pbreak          rule  4
	Pcontinue       rule  5
	Pident          rule  6
	Pint            rule  7
	Pbool           rule  8
	Pstring         rule  9
	Preal           rule  10
	Pchar           rule  11
	Program         rule  12
	ListDec         rules 13, 14
	Dec             rules 15, 16, 17, 18, 19, 20
	Type_specifier  rules 21, 22, 23, 24, 25, 26, 27, 28, 29
	Argument        rule  30
	ListArgument    rules 31, 32, 33
	Modality        rules 34, 35, 36, 37
	Stm             rules 38, 39, 40, 41, 42, 43, 44, 45, 46
	DecStm          rules 47, 48
	ListDecStm      rules 49, 50
	Exp             rules 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77
	ListExp         rules 78, 79, 80
	Lexp            rules 81, 82, 83, 84
	Assignment_Op   rules 85, 86, 87, 88, 89, 90, 91, 92, 93

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'boolean'      reduce using rule 13
	'character'    reduce using rule 13
	'const'        reduce using rule 13
	'float'        reduce using rule 13
	'function'     reduce using rule 13
	'integer'      reduce using rule 13
	'pointer'      reduce using rule 13
	'string'       reduce using rule 13
	'void'         reduce using rule 13
	'{'            reduce using rule 13
	'{}'           reduce using rule 13
	%eof           reduce using rule 13

	Program        goto state 49
	ListDec        goto state 50

State 1


	'boolean'      shift, and enter state 38
	'character'    shift, and enter state 39
	'const'        shift, and enter state 40
	'float'        shift, and enter state 41
	'function'     shift, and enter state 42
	'integer'      shift, and enter state 43
	'pointer'      shift, and enter state 44
	'string'       shift, and enter state 45
	'void'         shift, and enter state 46
	'{'            shift, and enter state 47
	'{}'           shift, and enter state 48

	Dec            goto state 36
	Type_specifier goto state 37

State 2


	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'_'            shift, and enter state 17
	'for'          shift, and enter state 30
	'if'           shift, and enter state 31
	'not'          shift, and enter state 19
	'repeat'       shift, and enter state 32
	'return'       shift, and enter state 33
	'try'          shift, and enter state 34
	'while'        shift, and enter state 35
	'{'            shift, and enter state 20
	L_Pbool        shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pstring      shift, and enter state 24
	L_Preal        shift, and enter state 25
	L_Pchar        shift, and enter state 26

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Stm            goto state 27
	Exp            goto state 28
	Lexp           goto state 29

State 3


	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'_'            shift, and enter state 17
	'if'           shift, and enter state 18
	'not'          shift, and enter state 19
	'{'            shift, and enter state 20
	L_Pbool        shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pstring      shift, and enter state 24
	L_Preal        shift, and enter state 25
	L_Pchar        shift, and enter state 26

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 12
	Lexp           goto state 13

State 4


	L_Pbreak       shift, and enter state 5


State 5

	Pbreak -> L_Pbreak .                                (rule 4)



State 6

	Exp -> Pident . '(' ListExp ')'                     (rule 51)
	Lexp -> Pident .                                    (rule 81)

	'%'            reduce using rule 81
	'%='           reduce using rule 81
	'&'            reduce using rule 81
	'&='           reduce using rule 81
	'('            shift, and enter state 99
	')'            reduce using rule 81
	'*'            reduce using rule 81
	'*='           reduce using rule 81
	'+'            reduce using rule 81
	'+='           reduce using rule 81
	','            reduce using rule 81
	'-'            reduce using rule 81
	'-='           reduce using rule 81
	'/'            reduce using rule 81
	'/='           reduce using rule 81
	'<'            reduce using rule 81
	'<='           reduce using rule 81
	'='            reduce using rule 81
	'=='           reduce using rule 81
	'>'            reduce using rule 81
	'>='           reduce using rule 81
	'^'            reduce using rule 81
	'^='           reduce using rule 81
	'_'            reduce using rule 81
	'and'          reduce using rule 81
	'boolean'      reduce using rule 81
	'catch'        reduce using rule 81
	'character'    reduce using rule 81
	'const'        reduce using rule 81
	'do'           reduce using rule 81
	'else'         reduce using rule 81
	'end'          reduce using rule 81
	'float'        reduce using rule 81
	'for'          reduce using rule 81
	'function'     reduce using rule 81
	'if'           reduce using rule 81
	'integer'      reduce using rule 81
	'not'          reduce using rule 81
	'or'           reduce using rule 81
	'pointer'      reduce using rule 81
	'repeat'       reduce using rule 81
	'return'       reduce using rule 81
	'string'       reduce using rule 81
	'then'         reduce using rule 81
	'try'          reduce using rule 81
	'until'        reduce using rule 81
	'void'         reduce using rule 81
	'while'        reduce using rule 81
	'{'            reduce using rule 81
	'{}'           reduce using rule 81
	'|='           reduce using rule 81
	'}'            reduce using rule 81
	'~='           reduce using rule 81
	L_Pbool        reduce using rule 81
	L_Pident       reduce using rule 81
	L_Pint         reduce using rule 81
	L_Pstring      reduce using rule 81
	L_Preal        reduce using rule 81
	L_Pchar        reduce using rule 81
	%eof           reduce using rule 81


State 7

	Exp -> Pint .                                       (rule 74)

	'%'            reduce using rule 74
	'%='           reduce using rule 74
	'&'            reduce using rule 74
	'&='           reduce using rule 74
	'('            reduce using rule 74
	')'            reduce using rule 74
	'*'            reduce using rule 74
	'*='           reduce using rule 74
	'+'            reduce using rule 74
	'+='           reduce using rule 74
	','            reduce using rule 74
	'-'            reduce using rule 74
	'-='           reduce using rule 74
	'/'            reduce using rule 74
	'/='           reduce using rule 74
	'<'            reduce using rule 74
	'<='           reduce using rule 74
	'='            reduce using rule 74
	'=='           reduce using rule 74
	'>'            reduce using rule 74
	'>='           reduce using rule 74
	'^'            reduce using rule 74
	'^='           reduce using rule 74
	'_'            reduce using rule 74
	'and'          reduce using rule 74
	'boolean'      reduce using rule 74
	'catch'        reduce using rule 74
	'character'    reduce using rule 74
	'const'        reduce using rule 74
	'do'           reduce using rule 74
	'else'         reduce using rule 74
	'end'          reduce using rule 74
	'float'        reduce using rule 74
	'for'          reduce using rule 74
	'function'     reduce using rule 74
	'if'           reduce using rule 74
	'integer'      reduce using rule 74
	'not'          reduce using rule 74
	'or'           reduce using rule 74
	'pointer'      reduce using rule 74
	'repeat'       reduce using rule 74
	'return'       reduce using rule 74
	'string'       reduce using rule 74
	'then'         reduce using rule 74
	'try'          reduce using rule 74
	'until'        reduce using rule 74
	'void'         reduce using rule 74
	'while'        reduce using rule 74
	'{'            reduce using rule 74
	'{}'           reduce using rule 74
	'|='           reduce using rule 74
	'}'            reduce using rule 74
	'~='           reduce using rule 74
	L_Pbool        reduce using rule 74
	L_Pident       reduce using rule 74
	L_Pint         reduce using rule 74
	L_Pstring      reduce using rule 74
	L_Preal        reduce using rule 74
	L_Pchar        reduce using rule 74
	%eof           reduce using rule 74


State 8

	Exp -> Pbool .                                      (rule 75)

	'%'            reduce using rule 75
	'%='           reduce using rule 75
	'&'            reduce using rule 75
	'&='           reduce using rule 75
	'('            reduce using rule 75
	')'            reduce using rule 75
	'*'            reduce using rule 75
	'*='           reduce using rule 75
	'+'            reduce using rule 75
	'+='           reduce using rule 75
	','            reduce using rule 75
	'-'            reduce using rule 75
	'-='           reduce using rule 75
	'/'            reduce using rule 75
	'/='           reduce using rule 75
	'<'            reduce using rule 75
	'<='           reduce using rule 75
	'='            reduce using rule 75
	'=='           reduce using rule 75
	'>'            reduce using rule 75
	'>='           reduce using rule 75
	'^'            reduce using rule 75
	'^='           reduce using rule 75
	'_'            reduce using rule 75
	'and'          reduce using rule 75
	'boolean'      reduce using rule 75
	'catch'        reduce using rule 75
	'character'    reduce using rule 75
	'const'        reduce using rule 75
	'do'           reduce using rule 75
	'else'         reduce using rule 75
	'end'          reduce using rule 75
	'float'        reduce using rule 75
	'for'          reduce using rule 75
	'function'     reduce using rule 75
	'if'           reduce using rule 75
	'integer'      reduce using rule 75
	'not'          reduce using rule 75
	'or'           reduce using rule 75
	'pointer'      reduce using rule 75
	'repeat'       reduce using rule 75
	'return'       reduce using rule 75
	'string'       reduce using rule 75
	'then'         reduce using rule 75
	'try'          reduce using rule 75
	'until'        reduce using rule 75
	'void'         reduce using rule 75
	'while'        reduce using rule 75
	'{'            reduce using rule 75
	'{}'           reduce using rule 75
	'|='           reduce using rule 75
	'}'            reduce using rule 75
	'~='           reduce using rule 75
	L_Pbool        reduce using rule 75
	L_Pident       reduce using rule 75
	L_Pint         reduce using rule 75
	L_Pstring      reduce using rule 75
	L_Preal        reduce using rule 75
	L_Pchar        reduce using rule 75
	%eof           reduce using rule 75


State 9

	Exp -> Pstring .                                    (rule 76)

	'%'            reduce using rule 76
	'%='           reduce using rule 76
	'&'            reduce using rule 76
	'&='           reduce using rule 76
	'('            reduce using rule 76
	')'            reduce using rule 76
	'*'            reduce using rule 76
	'*='           reduce using rule 76
	'+'            reduce using rule 76
	'+='           reduce using rule 76
	','            reduce using rule 76
	'-'            reduce using rule 76
	'-='           reduce using rule 76
	'/'            reduce using rule 76
	'/='           reduce using rule 76
	'<'            reduce using rule 76
	'<='           reduce using rule 76
	'='            reduce using rule 76
	'=='           reduce using rule 76
	'>'            reduce using rule 76
	'>='           reduce using rule 76
	'^'            reduce using rule 76
	'^='           reduce using rule 76
	'_'            reduce using rule 76
	'and'          reduce using rule 76
	'boolean'      reduce using rule 76
	'catch'        reduce using rule 76
	'character'    reduce using rule 76
	'const'        reduce using rule 76
	'do'           reduce using rule 76
	'else'         reduce using rule 76
	'end'          reduce using rule 76
	'float'        reduce using rule 76
	'for'          reduce using rule 76
	'function'     reduce using rule 76
	'if'           reduce using rule 76
	'integer'      reduce using rule 76
	'not'          reduce using rule 76
	'or'           reduce using rule 76
	'pointer'      reduce using rule 76
	'repeat'       reduce using rule 76
	'return'       reduce using rule 76
	'string'       reduce using rule 76
	'then'         reduce using rule 76
	'try'          reduce using rule 76
	'until'        reduce using rule 76
	'void'         reduce using rule 76
	'while'        reduce using rule 76
	'{'            reduce using rule 76
	'{}'           reduce using rule 76
	'|='           reduce using rule 76
	'}'            reduce using rule 76
	'~='           reduce using rule 76
	L_Pbool        reduce using rule 76
	L_Pident       reduce using rule 76
	L_Pint         reduce using rule 76
	L_Pstring      reduce using rule 76
	L_Preal        reduce using rule 76
	L_Pchar        reduce using rule 76
	%eof           reduce using rule 76


State 10

	Exp -> Preal .                                      (rule 73)

	'%'            reduce using rule 73
	'%='           reduce using rule 73
	'&'            reduce using rule 73
	'&='           reduce using rule 73
	'('            reduce using rule 73
	')'            reduce using rule 73
	'*'            reduce using rule 73
	'*='           reduce using rule 73
	'+'            reduce using rule 73
	'+='           reduce using rule 73
	','            reduce using rule 73
	'-'            reduce using rule 73
	'-='           reduce using rule 73
	'/'            reduce using rule 73
	'/='           reduce using rule 73
	'<'            reduce using rule 73
	'<='           reduce using rule 73
	'='            reduce using rule 73
	'=='           reduce using rule 73
	'>'            reduce using rule 73
	'>='           reduce using rule 73
	'^'            reduce using rule 73
	'^='           reduce using rule 73
	'_'            reduce using rule 73
	'and'          reduce using rule 73
	'boolean'      reduce using rule 73
	'catch'        reduce using rule 73
	'character'    reduce using rule 73
	'const'        reduce using rule 73
	'do'           reduce using rule 73
	'else'         reduce using rule 73
	'end'          reduce using rule 73
	'float'        reduce using rule 73
	'for'          reduce using rule 73
	'function'     reduce using rule 73
	'if'           reduce using rule 73
	'integer'      reduce using rule 73
	'not'          reduce using rule 73
	'or'           reduce using rule 73
	'pointer'      reduce using rule 73
	'repeat'       reduce using rule 73
	'return'       reduce using rule 73
	'string'       reduce using rule 73
	'then'         reduce using rule 73
	'try'          reduce using rule 73
	'until'        reduce using rule 73
	'void'         reduce using rule 73
	'while'        reduce using rule 73
	'{'            reduce using rule 73
	'{}'           reduce using rule 73
	'|='           reduce using rule 73
	'}'            reduce using rule 73
	'~='           reduce using rule 73
	L_Pbool        reduce using rule 73
	L_Pident       reduce using rule 73
	L_Pint         reduce using rule 73
	L_Pstring      reduce using rule 73
	L_Preal        reduce using rule 73
	L_Pchar        reduce using rule 73
	%eof           reduce using rule 73


State 11

	Exp -> Pchar .                                      (rule 77)

	'%'            reduce using rule 77
	'%='           reduce using rule 77
	'&'            reduce using rule 77
	'&='           reduce using rule 77
	'('            reduce using rule 77
	')'            reduce using rule 77
	'*'            reduce using rule 77
	'*='           reduce using rule 77
	'+'            reduce using rule 77
	'+='           reduce using rule 77
	','            reduce using rule 77
	'-'            reduce using rule 77
	'-='           reduce using rule 77
	'/'            reduce using rule 77
	'/='           reduce using rule 77
	'<'            reduce using rule 77
	'<='           reduce using rule 77
	'='            reduce using rule 77
	'=='           reduce using rule 77
	'>'            reduce using rule 77
	'>='           reduce using rule 77
	'^'            reduce using rule 77
	'^='           reduce using rule 77
	'_'            reduce using rule 77
	'and'          reduce using rule 77
	'boolean'      reduce using rule 77
	'catch'        reduce using rule 77
	'character'    reduce using rule 77
	'const'        reduce using rule 77
	'do'           reduce using rule 77
	'else'         reduce using rule 77
	'end'          reduce using rule 77
	'float'        reduce using rule 77
	'for'          reduce using rule 77
	'function'     reduce using rule 77
	'if'           reduce using rule 77
	'integer'      reduce using rule 77
	'not'          reduce using rule 77
	'or'           reduce using rule 77
	'pointer'      reduce using rule 77
	'repeat'       reduce using rule 77
	'return'       reduce using rule 77
	'string'       reduce using rule 77
	'then'         reduce using rule 77
	'try'          reduce using rule 77
	'until'        reduce using rule 77
	'void'         reduce using rule 77
	'while'        reduce using rule 77
	'{'            reduce using rule 77
	'{}'           reduce using rule 77
	'|='           reduce using rule 77
	'}'            reduce using rule 77
	'~='           reduce using rule 77
	L_Pbool        reduce using rule 77
	L_Pident       reduce using rule 77
	L_Pint         reduce using rule 77
	L_Pstring      reduce using rule 77
	L_Preal        reduce using rule 77
	L_Pchar        reduce using rule 77
	%eof           reduce using rule 77


State 12

	%start_pExp -> Exp .                                (rule 3)
	Exp -> Exp . 'or' Exp                               (rule 53)
	Exp -> Exp . 'and' Exp                              (rule 54)
	Exp -> Exp . '==' Exp                               (rule 55)
	Exp -> Exp . '~=' Exp                               (rule 56)
	Exp -> Exp . '<' Exp                                (rule 57)
	Exp -> Exp . '>' Exp                                (rule 58)
	Exp -> Exp . '<=' Exp                               (rule 59)
	Exp -> Exp . '>=' Exp                               (rule 60)
	Exp -> Exp . '+' Exp                                (rule 61)
	Exp -> Exp . '-' Exp                                (rule 62)
	Exp -> Exp . '*' Exp                                (rule 63)
	Exp -> Exp . '/' Exp                                (rule 64)
	Exp -> Exp . '^' Exp                                (rule 65)
	Exp -> Exp . '%' Exp                                (rule 66)

	'%'            shift, and enter state 76
	'*'            shift, and enter state 77
	'+'            shift, and enter state 78
	'-'            shift, and enter state 79
	'/'            shift, and enter state 80
	'<'            shift, and enter state 81
	'<='           shift, and enter state 82
	'=='           shift, and enter state 83
	'>'            shift, and enter state 84
	'>='           shift, and enter state 85
	'^'            shift, and enter state 86
	'and'          shift, and enter state 87
	'or'           shift, and enter state 88
	'~='           shift, and enter state 89
	%eof           accept


State 13

	Exp -> Lexp .                                       (rule 72)
	Lexp -> Lexp . '{' Exp '}'                          (rule 84)

	'%'            reduce using rule 72
	'%='           reduce using rule 72
	'&'            reduce using rule 72
	'&='           reduce using rule 72
	'('            reduce using rule 72
	')'            reduce using rule 72
	'*'            reduce using rule 72
	'*='           reduce using rule 72
	'+'            reduce using rule 72
	'+='           reduce using rule 72
	','            reduce using rule 72
	'-'            reduce using rule 72
	'-='           reduce using rule 72
	'/'            reduce using rule 72
	'/='           reduce using rule 72
	'<'            reduce using rule 72
	'<='           reduce using rule 72
	'='            reduce using rule 72
	'=='           reduce using rule 72
	'>'            reduce using rule 72
	'>='           reduce using rule 72
	'^'            reduce using rule 72
	'^='           reduce using rule 72
	'_'            reduce using rule 72
	'and'          reduce using rule 72
	'boolean'      reduce using rule 72
	'catch'        reduce using rule 72
	'character'    reduce using rule 72
	'const'        reduce using rule 72
	'do'           reduce using rule 72
	'else'         reduce using rule 72
	'end'          reduce using rule 72
	'float'        reduce using rule 72
	'for'          reduce using rule 72
	'function'     reduce using rule 72
	'if'           reduce using rule 72
	'integer'      reduce using rule 72
	'not'          reduce using rule 72
	'or'           reduce using rule 72
	'pointer'      reduce using rule 72
	'repeat'       reduce using rule 72
	'return'       reduce using rule 72
	'string'       reduce using rule 72
	'then'         reduce using rule 72
	'try'          reduce using rule 72
	'until'        reduce using rule 72
	'void'         reduce using rule 72
	'while'        reduce using rule 72
	'{'            shift, and enter state 74
	'{}'           reduce using rule 72
	'|='           reduce using rule 72
	'}'            reduce using rule 72
	'~='           reduce using rule 72
	L_Pbool        reduce using rule 72
	L_Pident       reduce using rule 72
	L_Pint         reduce using rule 72
	L_Pstring      reduce using rule 72
	L_Preal        reduce using rule 72
	L_Pchar        reduce using rule 72
	%eof           reduce using rule 72


State 14

	Exp -> '&' . Exp                                    (rule 68)

	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'_'            shift, and enter state 17
	'if'           shift, and enter state 18
	'not'          shift, and enter state 19
	'{'            shift, and enter state 20
	L_Pbool        shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pstring      shift, and enter state 24
	L_Preal        shift, and enter state 25
	L_Pchar        shift, and enter state 26

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 98
	Lexp           goto state 13

State 15

	Exp -> '(' . Exp ')'                                (rule 52)
	Lexp -> '(' . Lexp ')'                              (rule 82)

	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'_'            shift, and enter state 17
	'if'           shift, and enter state 18
	'not'          shift, and enter state 19
	'{'            shift, and enter state 20
	L_Pbool        shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pstring      shift, and enter state 24
	L_Preal        shift, and enter state 25
	L_Pchar        shift, and enter state 26

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 96
	Lexp           goto state 97

State 16

	Exp -> '-' . Exp                                    (rule 69)

	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'_'            shift, and enter state 17
	'if'           shift, and enter state 18
	'not'          shift, and enter state 19
	'{'            shift, and enter state 20
	L_Pbool        shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pstring      shift, and enter state 24
	L_Preal        shift, and enter state 25
	L_Pchar        shift, and enter state 26

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 95
	Lexp           goto state 13

State 17

	Lexp -> '_' . Exp                                   (rule 83)

	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'_'            shift, and enter state 17
	'if'           shift, and enter state 18
	'not'          shift, and enter state 19
	'{'            shift, and enter state 20
	L_Pbool        shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pstring      shift, and enter state 24
	L_Preal        shift, and enter state 25
	L_Pchar        shift, and enter state 26

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 94
	Lexp           goto state 13

State 18

	Exp -> 'if' . Exp 'then' ListDecStm 'else' ListDecStm 'end'    (rule 67)

	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'_'            shift, and enter state 17
	'if'           shift, and enter state 18
	'not'          shift, and enter state 19
	'{'            shift, and enter state 20
	L_Pbool        shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pstring      shift, and enter state 24
	L_Preal        shift, and enter state 25
	L_Pchar        shift, and enter state 26

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 93
	Lexp           goto state 13

State 19

	Exp -> 'not' . Exp                                  (rule 70)

	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'_'            shift, and enter state 17
	'if'           shift, and enter state 18
	'not'          shift, and enter state 19
	'{'            shift, and enter state 20
	L_Pbool        shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pstring      shift, and enter state 24
	L_Preal        shift, and enter state 25
	L_Pchar        shift, and enter state 26

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 92
	Lexp           goto state 13

State 20

	Exp -> '{' . ListExp '}'                            (rule 71)

	'&'            shift, and enter state 14
	'('            shift, and enter state 15
	'-'            shift, and enter state 16
	'_'            shift, and enter state 17
	'if'           shift, and enter state 18
	'not'          shift, and enter state 19
	'{'            shift, and enter state 20
	'}'            reduce using rule 78
	L_Pbool        shift, and enter state 21
	L_Pident       shift, and enter state 22
	L_Pint         shift, and enter state 23
	L_Pstring      shift, and enter state 24
	L_Preal        shift, and enter state 25
	L_Pchar        shift, and enter state 26

	Pident         goto state 6
	Pint           goto state 7
	Pbool          goto state 8
	Pstring        goto state 9
	Preal          goto state 10
	Pchar          goto state 11
	Exp            goto state 90
	ListExp        goto state 91
	Lexp           goto state 13

State 21

	Pbool -> L_Pbool .                                  (rule 8)

	'%'            reduce using rule 8
	'%='           reduce using rule 8
	'&'            reduce using rule 8
	'&='           reduce using rule 8
	'('            reduce using rule 8
	')'            reduce using rule 8
	'*'            reduce using rule 8
	'*='           reduce using rule 8
	'+'            reduce using rule 8
	'+='           reduce using rule 8
	','            reduce using rule 8
	'-'            reduce using rule 8
